fix: small problem with modal on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -465,7 +465,7 @@ footer a{
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 30%;
+    width: 80%;
     display: flex;
     flex-direction: column;
 }
